--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ margin-top: 5px;
 }
 .about
 {
-    margin-bottom: 0;
+    margin-bottom: 50;
 }
 .about:last-child
 {
@@ -171,4 +171,31 @@ margin-top: 5px;
     text-transform: uppercase;
     letter-spacing: 1px;
     margin-bottom: 10px;
+}
+p
+{
+    color: #333;
+}
+.about .box
+{
+    display: flex;
+    flex-direction: row;
+    margin: 20px 0;
+}
+.about .box .year_company
+{
+    min-width: 150px;
+
+}
+.about .box .year_company h5
+{
+    text-transform: uppercase;
+    color: #848c90;
+    font-weight: 600;
+}
+.about .box .text h4
+{
+    text-transform: uppercase;
+    color: #2a7da2;
+    font-size: 16px;
 }
